Fix notice component action button spacing

--- a/packages/components/src/notice/style.scss
+++ b/packages/components/src/notice/style.scss
@@ -49,7 +49,7 @@
 
 	// When it has better support, this can be replaced
 	// with column-gap since these are flex items.
-	margin: $grid-unit-10;
+	margin: $grid-unit-10 $grid-unit-10 0 0;
 }
 
 .components-notice__dismiss {
